Tue Jun 30 11:05:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_find_1): fixed index overrun.

Tue Jun 30 08:42:34 2009  Eric Hodel  <drbrain@segment7.net>

	* tool/instruby.rb: summary is required in a .gemspec.

Tue Jun 30 01:35:12 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* tool/strip-rdocs.rb: supports QT style doxy-comments.

Tue Jun 30 01:24:10 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/cmath.rb (log2, cbrt): added.  [experimental]

Tue Jun 30 01:19:53 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_expt): do not use rb_fexpt.

Mon Jun 29 22:50:10 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* Doxyfile.in: removed. merged into template/Doxyfile.template

	* configure.in: new checking for dot and doxygen.

	* template/Doxyfile.template: merged with Doxyfile.in.
	  configured some options.

	* common.mk (capi): use $(DOXYGEN) instead of "doxygen".
	  (Doxyfile): removed a duplicate entry in the dependency.

Mon Jun 29 21:01:31 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_expt): checks exactness.

Mon Jun 29 20:29:11 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (float_to_r): always returns rational.

Mon Jun 29 18:55:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_find_1): fix for files with dots.  [ruby-dev:38588]

Mon Jun 29 17:14:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): should copy original encoding.
	  [ruby-dev:38612]

Wed May 13 22:34:31 2009  Narihiro Nakamura  <authorNari@gmail.com>

	* gc.c: add longlife garbage collection. [ruby-dev:38423]
	  (NORMAL_HEAPS_USED): new macro.
	  (LONGLIFE_ALLOCATE_HEAPS_MIN): ditto.
	  (add_longlife_heaps_slot): new function.
	  (rb_newobj_from_longlife_heap): ditto.
	  (rb_newobj_longlife): ditto.
	  (rb_node_newnode_longlife): ditto.
	  (rb_gc_write_barrier): ditto.
	  (remembered_set_recycle): ditto.
	  (rb_gc_mark_remembered_set): ditto.
	  (clear_mark_longlife_heaps): ditto.