@@ -1,3 +1,8 @@
+Tue Jun 30 11:08:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/oniguruma.h, include/ruby/re.h, re.c, regcomp.c,
+	  regenc.c, regerror.c, regexec.c, regint.h, regparse.c: use long.
+
 Tue Jun 30 11:05:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* dln.c (dln_find_1): fixed index overrun.
